--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     
     //Main menu
     <string name="tasks">Задачи</string>
-    <string name="peoples">Люди</string>
+    <string name="employees">Сотрудники</string>
     <string name="map">Карта</string>
-    <string name="account">Профиль</string>
+    <string name="account">Аккаунт</string>
 
     <string name="google_maps_key">AIzaSyBgB9Pr_LI7Mowe3T8ceBXLfv7TsiguR20</string>
 </resources>
