my tasks adapter finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="version_format">Версия %s</string>
     <string name="approximately_format">Примерно %s</string>
     <string name="finish_to_format">Закончить до %s</string>
+    <string name="task_number_format">Задача #%d</string>
     <string name="km_format">%d км</string>
     <string name="customer_format">Заказчик %s</string>
     <string name="min">мин</string>
